dl_report template: edited to eliminate breaking error in report rendering if there is no field exceeding error threshold

--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -1153,7 +1153,7 @@ rffield <-
       threshold = 0.01)
     )
 
-if(nrow(rffield) > 0) {
+if(!is.null(rffield)) {
   cat("Values in the table below are reported at the record level.")
   kableExtra::kbl(
     rffield |> 
