--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -517,6 +517,31 @@ duplicates <-
 #| echo: false
 #| output: asis
 
+sumLines <-
+  function(path) {
+
+    # Add a final "/" if not included already
+    if(!str_detect(path, "\\/$")){
+      path <- paste0(path, "/")
+    }
+
+    # Create a vector of the HIP .txt files to be read from the provided
+    # directory
+    # For reading data from a download cycle for ALL states available
+    dl_files <- list.files(path, pattern = "\\.txt|.TXT$")
+
+    sum_lines <- c()
+
+    for (i in seq_along(dl_files)){
+      con <- file(paste0(path, dl_files[i]))
+      sum_lines[i] <- length(readLines(con))
+      close(con)
+    }
+
+    return(data.frame(source_file = dl_files, num_lines = sum_lines))
+  }
+
+
 bullets <- 
   c(
     # Count of received lines of data, files, states
